applications/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    name: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/managed-by: kustomize
