applications/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pgadmin
